// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> should render correctly with no children 1`] = `
<div>
  <Translate(I18NComponent) />
  <div
    className="container"
  />
  <Translate(I18NComponent) />
</div>
`;

exports[`<Layout /> should render correctly with some children 1`] = `
<div>
  <Translate(I18NComponent) />
  <div
    className="container"
  >
    <div>
      Hello World 1
    </div>
    <p>
      Hello World 2
    </p>
    <span>
      Hello World 3
    </span>
  </div>
  <Translate(I18NComponent) />
</div>
`;
